--- a/get_all_user/get_all_user.phtml
+++ b/get_all_user/get_all_user.phtml
@@ -15,7 +15,7 @@
     ?>
         <?php $user_inviter=$user->get_user($value['id_user1']); ?>
         <div class="mosule d-flex justify-content-center mb-2">
-          <a   href="../Account_User/index.php?id_user=<?=$user_inviter['id_user1']?>">
+          <a   href="../Account_User/index.php?id_user=<?=$user_inviter['iduser']?>">
                    <img src="..<?=$user_inviter['photo_user'];?>" width="70px" height="40px" class="rounded img-thumbnail shadow-sm" alt="">
          </a>
                    <div class="body py-3 px-2">
