fix profil admin

--- a/ProfilUser/ProfilUser.phtml
+++ b/ProfilUser/ProfilUser.phtml
@@ -222,7 +222,7 @@ summary{
                             <?php endif; ?>
                         </div> 
                         </div>     
-                         <div  class="decription mt-2 rounded" style="background-color:<?=$value['theme']!='' ? $value['theme'] : ''?>">
+                         <div id="text"  class="decription mt-2 rounded" style="background-color:<?=$value['theme']!='' ? $value['theme'] : ''?>">
                              <?=$value['description']?>
                          </div>               
                         <?php if($value['avatar']!=''): ?>
